--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.14.x",
+    "dotenv": "^2.0.0",
     "express": "~4.13.x",
-    "mongodb": "~2.1.6"
+    "express-session": "^1.13.0",
+    "mongodb": "~2.1.6",
+    "passport": "^0.3.2",
+    "passport-twitter": "^1.0.4"
   },
   "engines": {
     "node": "4.2.4"
