--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.13.0",
     "mongodb": "~2.1.6",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-twitter": "^1.0.4"
   },
   "engines": {
