--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "name": "codemzy"
   },
   "dependencies": {
-    "body-parser": "^1.14.2",
-    "dotenv": "^2.0.0",
+    "body-parser": "~1.14.2",
+    "dotenv": "~2.0.0",
     "express": "~4.13.x",
-    "express-session": "^1.13.0",
+    "express-session": "~1.13.0",
     "mongodb": "~2.1.6",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.0",
-    "passport-twitter": "^1.0.4"
+    "passport": "~0.3.2",
+    "passport-facebook": "~2.1.0",
+    "passport-twitter": "~1.0.4"
   },
   "engines": {
     "node": "4.2.4"
